--- a/first.html
+++ b/first.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
   
-    <title>Html intro</title>
+    <title>Tensai the Great</title>
 </head>
 <body>
 <link rel="stylesheet" href="css1.css">
-    This is HTML
-    aaru ni thapeako
+<h1>
+    Sakuragi Hanamachi
+</h1>
+<img id="pp" src="pppic.png">
 </body>
 </html>
