--- a/first.html
+++ b/first.html
@@ -6,9 +6,13 @@
 </head>
 <body>
 <link rel="stylesheet" href="css1.css">
+<div id="tite">
+
+
+<img id="pp" src="pppic.png" >
 <h1>
     Sakuragi Hanamachi
 </h1>
-<img id="pp" src="pppic.png">
+</div>
 </body>
 </html>
