--- a/first.html
+++ b/first.html
@@ -14,5 +14,10 @@
     Sakuragi Hanamachi
 </h1>
 </div>
+<p>
+    Hanamichi Sakuragi (桜木 花道 Sakuragi Hanamichi) is the main protagonist of the Slam Dunk series. 
+    He plays as a power forward (and occasionally as a backup center) for the Shohoku High School basketball 
+    team.
+</p>
 </body>
 </html>
