--- a/sahankofolder/apnacollegesikeako/index.html
+++ b/sahankofolder/apnacollegesikeako/index.html
@@ -25,5 +25,23 @@
 
 
     </table>
+    <form action="">
+Name:<input type="text" placeholder="Text Here!!">
+<br>
+<label for="1">
+<input type="radio" value="11" name="clas" id="1">Class 11
+</label>
+<label for="2">
+<input type="radio" value="12" name="clas" id="2">Class 12
+</label>
+<br>
+<label for="101">
+<input type="checkbox" value="math" name="sub" id="101">Maths
+</label>
+<input type="checkbox" value="science" name="sub">Science
+<input type="checkbox" value="english" name="sub">English
+<input type="checkbox" value="computer" name="sub">Computer
+    </form>
+    
 </body>
 </html>
