--- a/sahankofolder/apnacollegesikeako/index.html
+++ b/sahankofolder/apnacollegesikeako/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>1</title>
-   <link rel="stylesheet" href="stylesheet.css">
+   <!-- <link rel="stylesheet" href="stylesheet.css"> -->
 </head>
 <body>
  <h1>Hello World!!</h1>   <br>
@@ -46,6 +46,6 @@ Desciptions:<textarea name="description" id="2" placeholder="Help"></textarea>
 </form>
 <iframe src="https://en.wikipedia.org/wiki/Goku" height="600" width="800"></iframe>
 <br>
-<video src="val.mp4" controls height="600" width="800" loop ></video>
+<a href="name.html">clickme to see the video</a>
 </body>
 </html>
