--- a/sahankofolder/classroom/index.html
+++ b/sahankofolder/classroom/index.html
@@ -13,7 +13,7 @@
     <h1 style="color: rgb(89, 89, 232);">sahanhomah</h1>
     <button style="color: pink" >Click me</button>
 <div id="box">
-    <p>Assignment 1</p>
+    <p>Assignment 1,2&3</p>
 </div>
 
 <h1 class="heading">heading 1</h1>
