--- a/sahankofolder/classroom/index.html
+++ b/sahankofolder/classroom/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1 style="color: rgb(89, 89, 232);">sahanhomah</h1>
-    <button style="color: pink" >Click me</button>
+    <a href="https://www.google.com/maps"><button style="color: pink" >Click me</button></a>
 <div id="box">
     <p>Assignment 1,2&3</p>
 </div>
@@ -20,7 +20,7 @@
 <h2 class="heading">heading 2</h2>
 <h3 class="heading">heading 3</h3>
 
-
+<a href="https://www.google.com/maps">click me</a>
 
 </body>
 </html>
