--- a/sahankofolder/classroom/index.html
+++ b/sahankofolder/classroom/index.html
@@ -22,5 +22,7 @@
 
 <a href="https://www.google.com/maps">click me</a>
 
+<h1 id="he">Heading</h1>
+<p id="she">Hellp what is up all good?</p>
 </body>
 </html>
