--- a/sahankofolder/SAHANKOFOLDER/form/index.html
+++ b/sahankofolder/SAHANKOFOLDER/form/index.html
@@ -9,27 +9,14 @@
     <h1>Registration Form</h1>
     <div>
 <form>
-    First Name:<input type="text" name="first_name" maxlength="9">
-<br>
-Last Name:<input type="text" name="last_name">
-<br>
-DOB:<input type="date" name="date" >
+   Username:<input type="text" name="first_name" maxlength="9">
+
 <br>
   Password:<input type="password" name="password">
 <br>
-<input type="checkbox" name="maths">Maths
-<input type="checkbox" name="science">Science
-<br>
-<input type="radio" name="Male">Male
-<input type="radio" name="Male">Female
-<br>
-<select name="sports" id="sport"><option value="sport">Interested Sports:</option>
-    <option value="Basketball">Basketball</option>
-    <option value="Football">Football</option>
-    <option value="MMA">MMA</option></select>
-<br>
-
-Description:<textarea name="Note" id="descriptionbox" cols="30" rows="10"></textarea>
+<input type="checkbox" name="BCA">BCA
+<input type="checkbox" name="CSIT">CSIT
+<input type="checkbox" name="BIM">BIM
 <br>
 <button id="submit" type="submit">Submit</button>
 <button type="reset">Reset</button>
