--- a/sahankofolder/SAHANKOFOLDER/form/index.html
+++ b/sahankofolder/SAHANKOFOLDER/form/index.html
@@ -6,22 +6,26 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form>
     <h1>Registration Form</h1>
-    <div>
-<form>
+    
+
    Username:<input type="text" name="first_name" maxlength="9">
 
 <br>
   Password:<input type="password" name="password">
 <br>
-<input type="checkbox" name="BCA">BCA
-<input type="checkbox" name="CSIT">CSIT
-<input type="checkbox" name="BIM">BIM
+<input type="radio" name="BCA">
+<label for="BCA">BCA</label>
+<input type="radio" name="BCA">
+<label for="CSIT">CSIT</label>
+<input type="radio" name="BCA">
+<label for="BIM">BIM</label>
 <br>
 <button id="submit" type="submit">Submit</button>
 <button type="reset">Reset</button>
 </form>   
-</div> 
+ 
 
 </body>
 </html>
