--- a/sahankofolder/SAHANKOFOLDER/form/index.html
+++ b/sahankofolder/SAHANKOFOLDER/form/index.html
@@ -10,10 +10,15 @@
     <h1>Registration Form</h1>
     
 
-   Username:<input type="text" name="first_name" maxlength="9">
+   Username:<input class="inputt" type="text" name="first_name"  minlength="4">
 
 <br>
-  Password:<input type="password" name="password">
+
+
+<br>
+
+  Password:<input  class="inputt" type="password" name="password">
+<br>
 <br>
 <input type="radio" name="BCA">
 <label for="BCA">BCA</label>
@@ -21,6 +26,7 @@
 <label for="CSIT">CSIT</label>
 <input type="radio" name="BCA">
 <label for="BIM">BIM</label>
+<br>
 <br>
 <button id="submit" type="submit">Submit</button>
 <button type="reset">Reset</button>
