--- a/sahankofolder/classroom/index.html
+++ b/sahankofolder/classroom/index.html
@@ -10,9 +10,9 @@
     </style>
 </head>
 <body>
-    <h1 style="color: rgb(89, 89, 232);">sahanhomah</h1>
-    <a href="https://www.google.com/maps"><button style="color: pink" >Click me</button></a>
-<div id="box">
+    <!-- <h1 style="color: rgb(89, 89, 232);">sahanhomah</h1>
+    <a href="https://www.google.com/maps"><button style="color: pink" >Click me</button></a> -->
+<!-- <div id="box">
     <p>Assignment 1,2&3</p>
 </div>
 
@@ -29,7 +29,21 @@
 <p>bahira</p>   
  <div id="inner">
 <p>bhitra sahannaihomah</p>
-    </div>
+    </div> -->
+<!-- </div> -->
+<!-- <div >
+   <div id="gao"></div>
+<div id="red"></div>
+<div id="green"></div>
+<div id="yellow"></div>
+</div> -->
+<div>
+<a href="#" id="logo">Amazon.in</a>
+<a href="#">Account</a>
+<a href="">Mycart</a>
+<a href="">Contact us</a>
+<input type="text" placeholder="Search">
+<button>Search</button>
 </div>
 </body>
 </html>
