--- a/sahankofolder/classroom/index.html
+++ b/sahankofolder/classroom/index.html
@@ -37,13 +37,17 @@
 <div id="green"></div>
 <div id="yellow"></div>
 </div> -->
-<div>
+<!-- <div>
 <a href="#" id="logo">Amazon.in</a>
 <a href="#">Account</a>
 <a href="">Mycart</a>
 <a href="">Contact us</a>
 <input type="text" placeholder="Search">
-<button>Search</button>
-</div>
+<button>Search</button> -->
+<!-- </div> -->
+<div id="red">box 1</div>
+<div id="blue">box 2</div>
+<div id="green">box 3</div>
+
 </body>
 </html>
