--- a/sahankofolder/project1/index.html
+++ b/sahankofolder/project1/index.html
@@ -6,13 +6,21 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="photo1"><img id="mobile" src="photo.png" alt=""></div>
+
   <div id="instagram">
     <h1><img src="image.png" ></h1>
     <form action="#">
     <input type="text" placeholder="Phone number, username, or email"> <br>
     <input type="password" placeholder="Password" > <br>
-    <button id="loginbutton">Login</button>
+    <button id="loginbutton">Log in</button>
 </form>
+<p>OR</p><br>
+<div id="facebook">
+  <img id="fblogo" src="facebook.png" >
+  <a  href="#">Login with facebook</a></div>
+  <a  id="f" href="#">Forgot password?</a>
+
   </div>  
 </body>
 </html>
