--- a/sahankofolder/project1/index.html
+++ b/sahankofolder/project1/index.html
@@ -15,12 +15,18 @@
     <input type="password" placeholder="Password" > <br>
     <button id="loginbutton">Log in</button>
 </form>
-<p>OR</p><br>
+<p id="or">OR</p><br>
 <div id="facebook">
   <img id="fblogo" src="facebook.png" >
   <a  href="#">Login with facebook</a></div>
   <a  id="f" href="#">Forgot password?</a>
-
+  <div id="signup">
+    Don't have an account?   <a href="#">  Sign up</a>
+   </div>
+   <p id="app">Get the app.</p>
+   <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D42F25EDF-7D46-49CB-A323-C390B14E060A%26utm_campaign%3DunifiedHome%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img id ="google" src="googleplay.png" ></a>
+   <a href="https://apps.microsoft.com/detail/9nblggh5l9xt?hl=en-us&gl=US"><img id="microsoft" src="microsoft.png" ></a>
   </div>  
+  
 </body>
 </html>
