project instagram finish

--- a/sahankofolder/project1/index.html
+++ b/sahankofolder/project1/index.html
@@ -18,15 +18,40 @@
 <p id="or">OR</p><br>
 <div id="facebook">
   <img id="fblogo" src="facebook.png" >
-  <a  href="#">Login with facebook</a></div>
+  <a id="fa" href="#">Login with facebook</a></div>
   <a  id="f" href="#">Forgot password?</a>
   <div id="signup">
-    Don't have an account?   <a href="#">  Sign up</a>
+    Don't have an account?   <a href="#" id="sign">  Sign up</a>
    </div>
    <p id="app">Get the app.</p>
    <a href="https://play.google.com/store/apps/details?id=com.instagram.android&referrer=ig_mid%3D42F25EDF-7D46-49CB-A323-C390B14E060A%26utm_campaign%3DunifiedHome%26utm_content%3Dlo%26utm_source%3Dinstagramweb%26utm_medium%3Dbadge"><img id ="google" src="googleplay.png" ></a>
    <a href="https://apps.microsoft.com/detail/9nblggh5l9xt?hl=en-us&gl=US"><img id="microsoft" src="microsoft.png" ></a>
   </div>  
-  
+  <br><br><br><br>
+  <div id="l" >
+  <a id="first" href="">Meta</a>
+  <a id="last"href="">About</a>
+  <a id="last" href="">Blog</a>
+  <a id="last" href="">Jobs</a>
+  <a id="last" href="">Help</a>
+  <a id="last" href="">API</a>
+  <a id="last" href="">Privacy</a>
+  <a id="last" href="">Terms</a>
+  <a id="last" href="">Locations</a>
+  <a id="last" href="">Instagram Lite</a>
+  <a id="last" href="">Threads</a>
+  <a id="last" href="">Contact Uploading & Non-users</a>
+  <a id="last" href="">Meta Verified</a>
+</div><br>
+
+<div id="lastt"> <select name="English" id="language">
+  <option value="English">English</option>
+  <option value="नेपाली">नेपाली</option>
+  <option value="español">español</option>
+  <option value="Deutsch">Deutsch</option>
+</select>
+<div id="non">© 2025 Instagram from Meta</div> </div>
+ 
+
 </body>
 </html>
