--- a/project1/index.html
+++ b/project1/index.html
@@ -17,8 +17,8 @@
    </div>
    <div class="icon"> <a href="clock.html"> <img src="clock.png" alt="icon" width="45" title="Clock"></a><br>
    <div id="clock"><p >Clock</p></div>
-     <div class="icon"> <a href="clock.html"> <img src="clock.png" alt="icon" width="45" title="Clock"></a><br>
-   <div id="clock"><p >Clock</p></div>
+     <div class="icon"> <a href="notepad.html"> <img src="notepad.svg" alt="icon" width="45" title="Notepad"></a><br>
+   <p class="iconkoname">Notepad</p>
 </div>
 </body>
 </body>
