--- a/project1/index.html
+++ b/project1/index.html
@@ -8,18 +8,21 @@
 </head>
 <body>
     <div class="icon">
-   <a href="instagram.html"> <img src="instaicon.png" alt="icon" width="45" title="Instagram"></a><br>
+   <a href="instagram.html"> <img src="instaicon.png" alt="icon" width="45" title="Instagram">
+</a>
    <p class="iconkoname">Instagram</p>
 </div>
 <div class="icon">
-   <a href="calculator.html"> <img src="calculator.png" alt="icon" width="45" title="Calculator"></a><br>
+   <a href="calculator.html"> <img src="calculator.png" alt="icon" width="45" title="Calculator"></a>
    <p class="iconkoname">Calculator</p>
    </div>
-   <div class="icon"> <a href="clock.html"> <img src="clock.png" alt="icon" width="45" title="Clock"></a><br>
-   <div id="clock"><p >Clock</p></div>
-     <div class="icon"> <a href="notepad.html"> <img src="notepad.svg" alt="icon" width="45" title="Notepad"></a><br>
+   <div class="icon"> <a href="clock.html"> <img src="clock.png" alt="icon" width="45" title="Clock"></a>
+  <p class="iconkoname">     Clock</p>
+</div>
+     <div class="icon"> <a href="notepad.html"> <img src="notepad.svg" alt="icon" width="45" title="Notepad"></a>
    <p class="iconkoname">Notepad</p>
 </div>
+
 </body>
 </body>
 </html>
