clock change focues

--- a/project1/index.html
+++ b/project1/index.html
@@ -22,7 +22,7 @@
      <div class="icon"> <a href="notepad.html"> <img src="notepad.svg" alt="icon" width="45" title="Notepad"></a>
    <p class="iconkoname">Notepad</p>
 </div>
- <div class="icon"> <a href="shooter.html"> <img src="shooter.png" alt="icon" width="45" title="Notepad"></a>
+ <div class="icon"> <a href="shooterstart.html"> <img src="shooter.png" alt="icon" width="45" title="Notepad"></a>
    <p class="iconkoname">Shooter</p>
 </div>
 </body>
