--- a/project1/clock.html
+++ b/project1/clock.html
@@ -2,66 +2,125 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Analog Clock</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Analog Clock - Nepal Time</title>
   <style>
     body {
       display: flex;
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #f0f0f0;
+      background-color: #2c3e50;
+      margin: 0;
     }
 
-    .clock {
-      width: 300px;
-      height: 300px;
-      border: 10px solid #333;
+    canvas {
+      background-color: #34495e;
       border-radius: 50%;
-      position: relative;
-      background: white;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
-
-    .hand {
-      position: absolute;
-      width: 50%;
-      height: 4px;
-      background: black;
-      top: 50%;
-      left: 50%;
-      transform-origin: 0% 50%;
-      transform: rotate(90deg);
-      transition: all 0.05s ease-in-out;
-    }
-
-    .hour { width: 30%; height: 6px; background: #000; }
-    .minute { width: 40%; height: 4px; background: #666; }
-    .second { width: 45%; height: 2px; background: red; }
   </style>
 </head>
 <body>
 
-<div class="clock">
-  <div class="hand hour" id="hour-hand"></div>
-  <div class="hand minute" id="minute-hand"></div>
-  <div class="hand second" id="second-hand"></div>
-</div>
+  <canvas id="canvas" width="400" height="400"></canvas>
 
-<script>
-  function updateClock() {
-    const now = new Date();
-    const nepalTime = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Kathmandu' }));
-    const sec = now.getSeconds();
-    const min = now.getMinutes();
-    const hr = now.getHours();
+  <script>
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
 
-    document.getElementById('second-hand').style.transform = `rotate(${sec * 6}deg)`;
-    document.getElementById('minute-hand').style.transform = `rotate(${min * 6}deg)`;
-    document.getElementById('hour-hand').style.transform = `rotate(${(hr % 12) * 30 + min * 0.5}deg)`;
-  }
+    let radius = canvas.height / 2;
+    ctx.translate(radius, radius); // Translate the origin to the center of the canvas
+    radius = radius * 0.90; // Reduce the radius to fit within the canvas
 
-  setInterval(updateClock, 1000);
-  updateClock(); 
-</script>
+    function drawClock() {
+      // Clear the canvas
+      ctx.clearRect(-canvas.width / 2, -canvas.height / 2, canvas.width, canvas.height);
+
+      // Draw the clock face
+      drawFace(ctx, radius);
+
+      // Draw the hands
+      drawTime(ctx, radius);
+
+      // Draw the clock's tick marks
+      drawTicks(ctx, radius);
+    }
+
+    function drawFace(ctx, radius) {
+      // Draw the circle for the clock face
+      ctx.beginPath();
+      ctx.arc(0, 0, radius, 0, 2 * Math.PI);
+      ctx.fillStyle = "#34495e";
+      ctx.fill();
+      ctx.lineWidth = 10;
+      ctx.strokeStyle = "#fff";
+      ctx.stroke();
+
+      // Draw the center
+      ctx.beginPath();
+      ctx.arc(0, 0, 10, 0, 2 * Math.PI);
+      ctx.fillStyle = "#fff";
+      ctx.fill();
+    }
+
+    function drawTicks(ctx, radius) {
+      // Draw the tick marks for hours and minutes
+      ctx.lineWidth = 4;
+      ctx.strokeStyle = "#fff";
+      ctx.beginPath();
+
+      for (let i = 0; i < 60; i++) {
+        let angle = i * Math.PI / 30;
+        let tickRadius = (i % 5 === 0) ? radius - 20 : radius - 10;
+        ctx.moveTo(tickRadius * Math.cos(angle), tickRadius * Math.sin(angle));
+        ctx.lineTo((tickRadius + 10) * Math.cos(angle), (tickRadius + 10) * Math.sin(angle));
+      }
+      ctx.stroke();
+    }
+
+    function drawTime(ctx, radius) {
+      const now = new Date();
+      // Adjust to Nepal Time (UTC +5:45)
+      const nepalTime = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Kathmandu' }));
+
+      // Get hours, minutes, and seconds
+      const hour = nepalTime.getHours() % 12; // 12-hour format
+      const minute = nepalTime.getMinutes();
+      const second = nepalTime.getSeconds();
+
+      // Hour hand
+      const hourDeg = (hour * Math.PI / 6) + (minute * Math.PI / 360);
+      ctx.lineWidth = 8;
+      ctx.strokeStyle = "#f39c12";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.5 * Math.cos(hourDeg), radius * 0.5 * Math.sin(hourDeg));
+      ctx.stroke();
+
+      // Minute hand
+      const minuteDeg = (minute * Math.PI / 30) + (second * Math.PI / 1800);
+      ctx.lineWidth = 6;
+      ctx.strokeStyle = "#3498db";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.7 * Math.cos(minuteDeg), radius * 0.7 * Math.sin(minuteDeg));
+      ctx.stroke();
+
+      // Second hand
+      const secondDeg = (second * Math.PI / 30);
+      ctx.lineWidth = 2;
+      ctx.strokeStyle = "#e74c3c";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.8 * Math.cos(secondDeg), radius * 0.8 * Math.sin(secondDeg));
+      ctx.stroke();
+    }
+
+    // Update the clock every second
+    setInterval(drawClock, 1000);
+    drawClock(); // Initial call to display time immediately
+  </script>
 
 </body>
 </html>
