--- a/project1/test.html
+++ b/project1/test.html
@@ -2,147 +2,124 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Catch the Circle with Timer</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Analog Clock - Nepal Time</title>
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      text-align: center;
-      font-family: Arial, sans-serif;
-      background-color: #f0f0f0;
-    }
-
-    h1 {
-      margin-top: 20px;
-    }
-
-    #info {
-      font-size: 18px;
-    }
-
-    #gameArea {
-      position: relative;
-      width: 100%;
-      height: 80vh;
-      border: 2px solid #333;
-      margin: 20px auto;
-      background-color: #fff;
-      overflow: hidden;
-    }
-
-    #circle {
-      position: absolute;
-      width: 50px;
-      height: 50px;
-      background-color: crimson;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: top 0.2s, left 0.2s;
-    }
-
-    #gameOver {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 80vh;
-      background-color: rgba(0, 0, 0, 0.8);
-      color: white;
-      display: none;
-      flex-direction: column;
+      display: flex;
       justify-content: center;
       align-items: center;
-      font-size: 24px;
+      height: 100vh;
+      background-color: #2c3e50;
+      margin: 0;
     }
 
-    #restartBtn {
-      margin-top: 20px;
-      padding: 10px 20px;
-      font-size: 18px;
-      background-color: #4caf50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
+    canvas {
+      background-color: #34495e;
+      border-radius: 50%;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     }
   </style>
 </head>
 <body>
 
-  <h1>Catch the Circle!</h1>
-  <p id="info">Time Left: <span id="timeLeft">30</span>s | Score: <span id="score">0</span></p>
-
-  <div id="gameArea">
-    <div id="circle"></div>
-    <div id="gameOver">
-      <div id="finalScore">Your Score: 0</div>
-      <button id="restartBtn">Play Again</button>
-    </div>
-  </div>
+  <canvas id="canvas" width="400" height="400"></canvas>
 
   <script>
-    const circle = document.getElementById("circle");
-    const scoreDisplay = document.getElementById("score");
-    const timeDisplay = document.getElementById("timeLeft");
-    const gameOverScreen = document.getElementById("gameOver");
-    const finalScoreText = document.getElementById("finalScore");
-    const restartBtn = document.getElementById("restartBtn");
-    const gameArea = document.getElementById("gameArea");
+    const canvas = document.getElementById("canvas");
+    const ctx = canvas.getContext("2d");
 
-    let score = 0;
-    let timeLeft = 30;
-    let timer;
-    let gameRunning = true;
+    let radius = canvas.height / 2;
+    ctx.translate(radius, radius); // Translate the origin to the center of the canvas
+    radius = radius * 0.90; // Reduce the radius to fit within the canvas
 
-    function moveCircle() {
-      const areaWidth = gameArea.clientWidth - 50;
-      const areaHeight = gameArea.clientHeight - 50;
-      const randomX = Math.floor(Math.random() * areaWidth);
-      const randomY = Math.floor(Math.random() * areaHeight);
-      circle.style.left = randomX + "px";
-      circle.style.top = randomY + "px";
+    function drawClock() {
+      // Clear the canvas
+      ctx.clearRect(-canvas.width / 2, -canvas.height / 2, canvas.width, canvas.height);
+
+      // Draw the clock face
+      drawFace(ctx, radius);
+
+      // Draw the hands
+      drawTime(ctx, radius);
+
+      // Draw the clock's tick marks
+      drawTicks(ctx, radius);
     }
 
-    function updateTimer() {
-      timeLeft--;
-      timeDisplay.textContent = timeLeft;
+    function drawFace(ctx, radius) {
+      // Draw the circle for the clock face
+      ctx.beginPath();
+      ctx.arc(0, 0, radius, 0, 2 * Math.PI);
+      ctx.fillStyle = "#34495e";
+      ctx.fill();
+      ctx.lineWidth = 10;
+      ctx.strokeStyle = "#fff";
+      ctx.stroke();
 
-      if (timeLeft <= 0) {
-        clearInterval(timer);
-        endGame();
+      // Draw the center
+      ctx.beginPath();
+      ctx.arc(0, 0, 10, 0, 2 * Math.PI);
+      ctx.fillStyle = "#fff";
+      ctx.fill();
+    }
+
+    function drawTicks(ctx, radius) {
+      // Draw the tick marks for hours and minutes
+      ctx.lineWidth = 4;
+      ctx.strokeStyle = "#fff";
+      ctx.beginPath();
+
+      for (let i = 0; i < 60; i++) {
+        let angle = i * Math.PI / 30;
+        let tickRadius = (i % 5 === 0) ? radius - 20 : radius - 10;
+        ctx.moveTo(tickRadius * Math.cos(angle), tickRadius * Math.sin(angle));
+        ctx.lineTo((tickRadius + 10) * Math.cos(angle), (tickRadius + 10) * Math.sin(angle));
       }
+      ctx.stroke();
     }
 
-    function endGame() {
-      gameRunning = false;
-      circle.style.display = "none";
-      finalScoreText.textContent = `Your Score: ${score}`;
-      gameOverScreen.style.display = "flex";
+    function drawTime(ctx, radius) {
+      const now = new Date();
+      // Adjust to Nepal Time (UTC +5:45)
+      const nepalTime = new Date(now.toLocaleString('en-US', { timeZone: 'Asia/Kathmandu' }));
+
+      // Get hours, minutes, and seconds
+      const hour = nepalTime.getHours() % 12; // 12-hour format
+      const minute = nepalTime.getMinutes();
+      const second = nepalTime.getSeconds();
+
+      // Hour hand
+      const hourDeg = (hour * Math.PI / 6) + (minute * Math.PI / 360);
+      ctx.lineWidth = 8;
+      ctx.strokeStyle = "#f39c12";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.5 * Math.cos(hourDeg), radius * 0.5 * Math.sin(hourDeg));
+      ctx.stroke();
+
+      // Minute hand
+      const minuteDeg = (minute * Math.PI / 30) + (second * Math.PI / 1800);
+      ctx.lineWidth = 6;
+      ctx.strokeStyle = "#3498db";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.7 * Math.cos(minuteDeg), radius * 0.7 * Math.sin(minuteDeg));
+      ctx.stroke();
+
+      // Second hand
+      const secondDeg = (second * Math.PI / 30);
+      ctx.lineWidth = 2;
+      ctx.strokeStyle = "#e74c3c";
+      ctx.beginPath();
+      ctx.moveTo(0, 0);
+      ctx.lineTo(radius * 0.8 * Math.cos(secondDeg), radius * 0.8 * Math.sin(secondDeg));
+      ctx.stroke();
     }
 
-    circle.addEventListener("click", () => {
-      if (!gameRunning) return;
-      score++;
-      scoreDisplay.textContent = score;
-      moveCircle();
-    });
-
-    restartBtn.addEventListener("click", () => {
-      // Reset game state
-      score = 0;
-      timeLeft = 30;
-      scoreDisplay.textContent = score;
-      timeDisplay.textContent = timeLeft;
-      circle.style.display = "block";
-      gameOverScreen.style.display = "none";
-      gameRunning = true;
-      moveCircle();
-      timer = setInterval(updateTimer, 1000);
-    });
-
-    // Start the game
-    moveCircle();
-    timer = setInterval(updateTimer, 1000);
+    // Update the clock every second
+    setInterval(drawClock, 1000);
+    drawClock(); // Initial call to display time immediately
   </script>
 
 </body>
